ui/src/styles/home/_view-6.scss
#view-6 {
	background-color: rgba($primary, .02);
	position: relative;

	@media (min-width: 320px) {
		height: ($baseline * 47);
	}

	@media (min-width: 480px) {
		height: ($baseline * 58);
	}
}

#view-6 .giant {
	height: ($baseline * 58);
	position: relative;
	//top: ($baseline * 10);
	z-index: 1;

	width: 100%;
	overflow: hidden;
}

#view-6 .giant span {
	margin: 0;
	padding: 0;
	text-shadow: 0 40px 50px rgba(14, 20, 26, 0.05);
	color: $auxiliary;
	font-family: $font-primary;
	font-weight: 700;
	font-size: 498px;
	line-height: 360px;
	text-align: center;
	width: 1700px;
	height: 360px;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -850px;
	margin-top: -230px;
}

#view-6 .info {
	width: 100%;
	position: absolute;
	z-index: 10;
	top: ($baseline * 16);

	@media (min-width: 320px) {
		top: ($baseline * 7);
	}

	@media (min-width: 480px) {
		top: ($baseline * 13);
	}

	@media (min-width: 600px) {
		top: ($baseline * 15);
	}

	@media (min-width: 1024px) {
		top: ($baseline * 16);
	}
}

#view-6 .info .info__title {
	min-height: ($baseline * 4);
	width: 100%;

	@media (min-width: 320px) {
		margin: 0 0 ($baseline * 3);
	}

	@media (min-width: 840px) {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: center;
		align-items: flex-start;
	}

	@media (min-width: 1024px) {
		margin: 0 0 ($baseline * 6);
	}
}

#view-6 .info .info__title h2 {
	font-family: $font-primary;
	font-weight: 700;
	color: rgba($primary, .9);
	position: relative;
	top: -1px;
	letter-spacing: -0.008em;

	@media (min-width: 320px) {
		font-size: 30px;
		line-height: ($baseline * 3);
		padding: 0 20px;
	}

	@media (min-width: 480px) {
		font-size: 40px;
		line-height: ($baseline * 4);
		padding: 0 40px;
	}

	@media (min-width: 840px) {
		width: 75%;
	}

	@media (min-width: 1024px) {
		width: 100%;
	}
}

#view-6 .info .info__button {
	margin: 0 auto;
	height: ($baseline * 6);
	margin-bottom: ($baseline * 3);

	@media (min-width: 320px) {
		width: 100%;
		padding: 0 20px;
	}

	@media (min-width: 480px) {
		width: 310px;
		padding: 0;
	}

	@media (min-width: 600px) {
		width: 75%;
	}

	@media (min-width: 960px) {
		width: 50%;
	}

	@media (min-width: 1280px) {
		width: 452px;
	}

	@media (min-width: 1440px) {
		width: 23.6%;
	}
}

#view-6 .info .info__button .btn {
	height: 72px;
	line-height: 72px;
	font-size: 17px;
	font-family: $font-primary;
	font-weight: 700;
}

#view-6 .info .info__question {
	height: ($baseline * 3);

	@media (min-width: 840px) {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: center;
		align-items: flex-start;
	}
}

#view-6 .info .info__question h5 {
	font-family: 'Galano Medium', sans-serif;
	color: rgba($primary, .9);
	position: relative;
	top: -4px;
	letter-spacing: -0.02em;
	font-weight: 400;

	@media (min-width: 320px) {
		font-size: 17px;
		line-height: ($baseline * 2);
		padding: 0 20px;
	}

	@media (min-width: 480px) {
		font-size: 22.7px;
		line-height: 36px;
		padding: 0 40px;
	}

	@media (min-width: 720px) {
		width: 100%;
	}

	@media (min-width: 840px) {
		width: 75%;
	}

	@media (min-width: 960px) {
		width: 100%;
	}
}

#view-6 .info .info__question h5 .phone {
	color: rgba($primary, .9) !important;

	@media (min-width: 320px) {
		display: block;
	}

	@media (min-width: 720px) {
		display: inline;
	}

	@media (min-width: 840px) {
		display: block;
	}

	@media (min-width: 960px) {
		display: inline;
	}
}

